# ShapeletSelection-OpenCL

./: .gitignore  CMakeLists.txt  README.md  makefile
apps/: CMakeLists.txt  extract_shapelets.cpp
data/BirdChicken/: BirdChicken_TRAIN.csv
data/Coffee/: Coffee_TEST.csv
data/ECGFiveDays/: ECGFiveDays_TEST.csv
data/ItalyPowerDemand/: ItalyPowerDemand_TEST.csv
data/MoteStrain/: MoteStrain_TEST.csv
data/SonyAIBORobotSurface1/: SonyAIBORobotSurface1_TEST.csv
data/TwoLeadECG/: TwoLeadECG_TEST.csv
include/: shapelet_transform.hpp
kernels/: shapelet_distance_kernel.cl
src/: CMakeLists.txt  extract_shapelets.cpp  shapelet_transform.cpp  shapelet_transform.hpp
tests/: CMakeLists.txt  testlib.cpp
